data/collection/fixes/descriptions/java/JDK-8013394
Sample has collection with its own iterator. Use of the collection fails to compile with the same error message noted in 80111432,
is defined in an inaccessible class or interface

T:\\ws\\tl\\langtools\\test\\tools\\javac\\T8011432\\test2.java:12: error: hasNext() in TestCollection.testCollectionIterator is defined in an inaccessible class or interface
    for( String s : tc1)  System.out.print(s); System.out.println();
                    ^
1 error

jtreg test case attached.